kube/daemonset.yml
---
apiVersion: v1
kind: Service
metadata:
  name: podstalk
spec:
  selector:
    app: podstalk
  ports:
    - protocol: TCP
      port: 8080

---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: podstalk
  labels:
    app: podstalk
spec:
  selector:
    matchLabels:
      ds: podstalk
  template:
    metadata:
      labels:
        ds: podstalk
        app: podstalk
    spec:
      containers:
        - name: podstalk
          image: mhutter/podstalk
          ports:
            - containerPort: 8080
